Fixes page header on mobile and adds mobile view

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -28,3 +28,13 @@
   padding: 8px 20px;
   border-radius: 34px;
 }
+
+@media only screen and (max-width: 900px) { 
+  .container .channels {
+    flex-direction: column;
+  }
+
+  .container .channels div {
+    margin: 8px 0;
+  }
+}
